--- a/package.json
+++ b/package.json
@@ -24,6 +24,12 @@
     "semantic-release": "semantic-release",
     "test": "ava"
   },
+  "dependencies": {
+    "chalk": "^5.3.0",
+    "concat-with-sourcemaps": "^1.1.0",
+    "fast-glob": "^3.2.5",
+    "yargs": "^17.7.2"
+  },
   "devDependencies": {
     "@commitlint/cli": "^17.5.1",
     "@commitlint/config-conventional": "^17.4.4",
@@ -35,17 +41,12 @@
     "@semantic-release/release-notes-generator": "^11.0.1",
     "ava": "^5.2.0",
     "c8": "^7.13.0",
-    "chalk": "^5.3.0",
-    "concat-with-sourcemaps": "^1.1.0",
-    "fast-glob": "^3.2.5",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.2",
-    "merge-source-map": "1.1.0",
     "mock-fs": "^5.2.0",
     "prettier": "^2.8.7",
     "prettier-package-json": "^2.8.0",
-    "semantic-release": "^21.0.2",
-    "yargs": "^17.7.2"
+    "semantic-release": "^21.0.2"
   },
   "keywords": [
     "cli",
