--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "yargs": "^17.7.2"
   },
   "devDependencies": {
-    "@commitlint/cli": "^18.4.3",
-    "@commitlint/config-conventional": "^18.4.3",
+    "@commitlint/cli": "^18.6.0",
+    "@commitlint/config-conventional": "^18.6.0",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/commit-analyzer": "^11.1.0",
     "@semantic-release/git": "^10.0.1",
@@ -46,7 +46,7 @@
     "mock-fs": "^5.2.0",
     "prettier": "^3.1.0",
     "prettier-package-json": "^2.8.0",
-    "semantic-release": "^23.0.0"
+    "semantic-release": "^23.0.2"
   },
   "keywords": [
     "cli",
@@ -54,7 +54,7 @@
     "globbing"
   ],
   "engines": {
-    "node": ">=14 <=18"
+    "node": ">=20.8.1"
   },
   "publishConfig": {
     "access": "public",
