--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "scripts": {
     "coverage": "c8 yarn test",
-    "prepare": "husky install",
+    "postinstall": "husky || true",
+    "precommit": "commitlint --edit \"\" && lint-staged --allow-empty --config lint-staged.config.js",
     "prepublishOnly": "yarn test",
     "semantic-release": "semantic-release",
     "test": "ava"
@@ -43,6 +44,7 @@
     "c8": "^10.1.3",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.6",
+    "markdownlint": "^0.39.0",
     "mock-fs": "^5.5.0",
     "prettier": "^3.6.2",
     "prettier-package-json": "^2.8.0",
@@ -67,11 +69,19 @@
     }
   ],
   "lint-staged": {
-    "*.js": [
-      "prettier --write"
+    ".github/renovate.json": [
+      "yarn dlx --package renovate -- renovate-config-validator"
+    ],
+    "!(*renovate|package).{cjs,js,json}": [
+      "prettier --write",
+      "eslint --fix --cache --no-error-on-unmatched-pattern"
     ],
     "package.json": [
       "prettier-package-json --write"
+    ],
+    "*.md": [
+      "prettier --no-error-on-unmatched-pattern --ignore-unknown --log-level silent --write --config .prettierrc",
+      "markdownlint --config .markdownlint.json --fix"
     ]
   }
 }
