--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,12 +18,33 @@ jobs:
       - uses: actions/checkout@v5
         with:
           persist-credentials: false
+
+      - name: Enable Corepack
+        run: corepack enable
+
       - uses: actions/setup-node@v6
         with:
-          node-version: 20
+          node-version: 22
           cache: yarn
           registry-url: https://registry.npmjs.org
-      - run: yarn install --frozen-lockfile
+
+      ## --- YARN CACHE --- ##
+      - name: Check for cached dependencies
+        continue-on-error: true
+        id: cache-dependencies
+        uses: actions/cache@v4
+        with:
+          path: |
+            .cache/yarn
+            node_modules
+          key: ubuntu-latest-node22-${{ hashFiles('yarn.lock') }}
+
+      ## --- INSTALL --- ##
+      # If statement isn't needed here b/c yarn will leverage the cache if it exists
+      - name: Install dependencies
+        shell: bash
+        run: yarn install --immutable
+
       - name: Semantic release
         uses: cycjimmy/semantic-release-action@v5
         env:
