--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -11,13 +11,19 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v5
+
+      - name: Enable Corepack
+        run: corepack enable
+
       - name: Use Node LTS version
         uses: actions/setup-node@v6
         with:
           cache: yarn
-          node-version: 20
+          node-version: 22
+
       - name: Install dependencies
-        run: yarn install --frozen-lockfile
+        run: yarn install --immutable
+
       - name: Run test suite
         run: yarn test
 
@@ -27,12 +33,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
+
+      - name: Enable Corepack
+        run: corepack enable
+
       - uses: actions/setup-node@v6
         with:
           cache: yarn
-          node-version: 20
+          node-version: 22
+
       - name: Install dependencies
-        run: yarn install --frozen-lockfile
+        run: yarn install --immutable
+
       - name: Run coverage report
         run: yarn coverage
       - uses: actions/upload-artifact@v5
@@ -53,3 +65,91 @@ jobs:
           path: code-coverage-results.md
       - name: Write to job summary
         run: cat code-coverage-results.md >> $GITHUB_STEP_SUMMARY
+
+  # --- Lint pre-compiled assets for consistency --- #
+  lint:
+    runs-on: ubuntu-latest
+    timeout-minutes: 5
+    permissions:
+      contents: read
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v5
+        with:
+          fetch-depth: 0
+
+      - name: Enable Corepack
+        run: corepack enable
+
+      - name: Use Node LTS version
+        uses: actions/setup-node@v6
+        with:
+          node-version: 22
+          cache: yarn
+
+      ## --- YARN CACHE --- ##
+      - name: Check for cached dependencies
+        continue-on-error: true
+        id: cache-dependencies
+        uses: actions/cache@v4
+        with:
+          path: |
+            .cache/yarn
+            node_modules
+          key: ubuntu-latest-node22-${{ hashFiles('yarn.lock') }}
+
+      ## --- INSTALL --- ##
+      # If statement isn't needed here b/c yarn will leverage the cache if it exists
+      - name: Install dependencies
+        shell: bash
+        run: yarn install --immutable
+
+      - name: Get changed files
+        id: changed-files
+        uses: step-security/changed-files@v46
+        with:
+          files_yaml: |
+            eslint:
+              - '*.js'
+            mdlint:
+              - '*.md'
+              - '!expected/**'
+              - '!fixtures/**'
+
+      - name: Run eslint
+        uses: reviewdog/action-eslint@v1.34.0
+        if: ${{ steps.changed-files.outputs.eslint_added_files != '' || steps.changed-files.outputs.eslint_modified_files != '' }}
+        with:
+          fail_level: error
+          level: error
+          reporter: github-pr-review
+          filter_mode: diff_context
+          #   eslint_flags: "components/*/stories/*.js"
+          eslint_flags: "--config ${{ github.workspace }}/.eslintrc ${{ steps.changed-files.outputs.eslint_added_files }} ${{ steps.changed-files.outputs.eslint_modified_files }}"
+
+      - name: Run markdownlint on documentation
+        uses: reviewdog/action-markdownlint@v0.26.2
+        if: ${{ steps.changed-files.outputs.mdlint_added_files != '' || steps.changed-files.outputs.mdlint_modified_files != '' }}
+        with:
+          reporter: github-pr-review
+          filter_mode: diff_context
+          fail_level: error
+          markdownlint_flags: "--config ${{ github.workspace }}/.markdownlint.json ${{ steps.changed-files.outputs.mdlint_added_files }} ${{ steps.changed-files.outputs.mdlint_modified_files }}"
+
+      - name: Run lint
+        run: yarn lint --fix
+
+      # This step will evaluate the repo status and report the change
+      # If there are changes, capture the changes and upload them as an artifact
+      - name: Check if there are changes
+        shell: bash
+        run: |
+          if [[ -z $(git status --porcelain) ]]; then
+              echo "No changes detected"
+              exit 0
+          else
+              echo "Changes detected"
+              git status
+              git add .
+              exit 1
+          fi
