--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "private": false,
   "name": "glob-concat-cli",
   "version": "1.0.1",
   "description": "A concatenation tool leveraging fast-glob for CLIs",
@@ -20,6 +19,8 @@
   "scripts": {
     "coverage": "c8 yarn test",
     "postinstall": "husky || true",
+    "lint": "prettier --config .prettierrc --check . && eslint --cache --no-error-on-unmatched-pattern --report-unused-disable-directives . && markdownlint --config .markdownlint.json *.md --ignore node_modules",
+    "lint:fix": "prettier --config .prettierrc --write . && eslint --fix --cache --no-ignore --no-error-on-unmatched-pattern . && prettier-package-json --write package.json && markdownlint --config .markdownlint.json --fix *.md --ignore node_modules",
     "precommit": "commitlint --edit \"\" && lint-staged --allow-empty --config lint-staged.config.js",
     "prepublishOnly": "yarn test",
     "semantic-release": "semantic-release",
@@ -42,9 +43,13 @@
     "@semantic-release/release-notes-generator": "^14.1.0",
     "ava": "^6.4.1",
     "c8": "^10.1.3",
+    "eslint": "^8.57.1",
+    "eslint-plugin-jsonc": "^2.21.0",
     "husky": "^9.1.7",
+    "jsonc-eslint-parser": "^2.4.1",
     "lint-staged": "^16.2.6",
     "markdownlint": "^0.39.0",
+    "markdownlint-cli": "^0.45.0",
     "mock-fs": "^5.5.0",
     "prettier": "^3.6.2",
     "prettier-package-json": "^2.8.0",
@@ -56,7 +61,7 @@
     "globbing"
   ],
   "engines": {
-    "node": ">=20.8.1"
+    "node": ">=22.21.0"
   },
   "publishConfig": {
     "access": "public",
@@ -69,19 +74,20 @@
     }
   ],
   "lint-staged": {
-    ".github/renovate.json": [
-      "yarn dlx --package renovate -- renovate-config-validator"
-    ],
-    "!(*renovate|package).{cjs,js,json}": [
+    "!(*renovate|package).{js,json}": [
       "prettier --write",
       "eslint --fix --cache --no-error-on-unmatched-pattern"
-    ],
-    "package.json": [
-      "prettier-package-json --write"
     ],
     "*.md": [
       "prettier --no-error-on-unmatched-pattern --ignore-unknown --log-level silent --write --config .prettierrc",
       "markdownlint --config .markdownlint.json --fix"
+    ],
+    ".github/renovate.json": [
+      "yarn dlx --package renovate -- renovate-config-validator"
+    ],
+    "package.json": [
+      "prettier-package-json --write"
     ]
-  }
+  },
+  "packageManager": "yarn@4.10.3"
 }
