chore: support both v22 and v24 in test CI

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -7,7 +7,9 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        node-version: [22, 24]
     steps:
       - name: Check out code
         uses: actions/checkout@v5
@@ -19,7 +21,7 @@ jobs:
         uses: actions/setup-node@v6
         with:
           cache: yarn
-          node-version: 24
+          node-version: ${{ matrix.node-version }}
 
       - name: Install dependencies
         run: yarn install --immutable
@@ -31,6 +33,9 @@ jobs:
     permissions:
       pull-requests: write
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [24]
     steps:
       - uses: actions/checkout@v5
 
@@ -40,7 +45,7 @@ jobs:
       - uses: actions/setup-node@v6
         with:
           cache: yarn
-          node-version: 24
+          node-version: ${{ matrix.node-version }}
 
       - name: Install dependencies
         run: yarn install --immutable
@@ -72,6 +77,9 @@ jobs:
     timeout-minutes: 5
     permissions:
       contents: read
+    strategy:
+      matrix:
+        node-version: [24]
     steps:
       - name: Check out code
         uses: actions/checkout@v5
@@ -84,7 +92,7 @@ jobs:
       - name: Use Node LTS version
         uses: actions/setup-node@v6
         with:
-          node-version: 24
+          node-version: ${{ matrix.node-version }}
           cache: yarn
 
       ## --- YARN CACHE --- ##
@@ -96,7 +104,7 @@ jobs:
           path: |
             .cache/yarn
             node_modules
-          key: ubuntu-latest-node22-${{ hashFiles('yarn.lock') }}
+          key: ubuntu-latest-node${{ matrix.node-version }}-${{ hashFiles('yarn.lock') }}
 
       ## --- INSTALL --- ##
       # If statement isn't needed here b/c yarn will leverage the cache if it exists
