--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,6 +9,9 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     permissions: write-all
+    strategy:
+      matrix:
+        node-version: [24]
     env:
       NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -24,7 +27,7 @@ jobs:
 
       - uses: actions/setup-node@v6
         with:
-          node-version: 24
+          node-version: ${{ matrix.node-version }}
           cache: yarn
           registry-url: https://registry.npmjs.org
 
@@ -37,7 +40,7 @@ jobs:
           path: |
             .cache/yarn
             node_modules
-          key: ubuntu-latest-node22-${{ hashFiles('yarn.lock') }}
+          key: ubuntu-latest-node${{ matrix.node-version }}-${{ hashFiles('yarn.lock') }}
 
       ## --- INSTALL --- ##
       # If statement isn't needed here b/c yarn will leverage the cache if it exists
